// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid.vue snapshots: should match snapshot if grid status is \`auto\` 1`] = `
<div
  class="grid"
  data-status="auto"
>
  <wrapper-clearfix-stub
    class="window primary"
  >
    <grid-header-stub />
     
    <wrapper-clearfix-stub
      class="main"
    >
      <action-bar-stub />
       
      <first-row-stub />
       
      <second-row-stub />
    </wrapper-clearfix-stub>
     
    <div
      class="grid-auto"
    >
      
      You're in Auto Mode
    
    </div>
  </wrapper-clearfix-stub>
</div>
`;

exports[`Grid.vue snapshots: should match snapshot if grid status is other then \`auto\` 1`] = `
<div
  class="grid"
  data-status="custom"
>
  <wrapper-clearfix-stub
    class="window primary"
  >
    <grid-header-stub />
     
    <wrapper-clearfix-stub
      class="main"
    >
      <action-bar-stub />
       
      <first-row-stub />
       
      <second-row-stub />
    </wrapper-clearfix-stub>
     
    <!---->
  </wrapper-clearfix-stub>
</div>
`;
